--- a/asiakaspalautteet.html
+++ b/asiakaspalautteet.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Jan 20 2026 10:20:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Feb 01 2026 15:58:49 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69404de2308842388ae6b07b" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Instrument Serif:regular,italic"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["IBM Plex Serif:300,400,500,600,700","Instrument Serif:300,400,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
@@ -224,6 +224,28 @@
                         </div>
                         <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e61-18249e5a" class="avatar__company">
                           <div class="text-color-inherit">Rakennuspalvelu Viljanen Oy</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div data-wf--testimonial---global--variant="primary" class="testimonial__component">
+                <div class="testimonial__wrap">
+                  <div class="testimonial__content">
+                    <div class="testimonial__quote">
+                      <p class="display-body--lg">&quot;Ensiluokkaista palvelua kaikin puolin. Asiakasta kuunnellaan ja pyynnöt huomioidaan. Tulee myös asiallisia kehitysehdotuksia, joka kielii että ammattitaitoa löytyy 🤝🏻&quot;</p>
+                    </div>
+                  </div>
+                  <div class="testimonial__avatar">
+                    <div data-wf--avatar---global--variant="primary" class="avatar__component">
+                      <div id="w-node-eff9879d-5adb-a1e9-3bab-e88007b9e947-18249e5a" class="avatar__divider"></div>
+                      <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e5d-18249e5a" class="avatar__content">
+                        <div class="avatar__name">
+                          <div class="text-color-inherit">Alex Vasica</div>
+                        </div>
+                        <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e61-18249e5a" class="avatar__company">
+                          <div class="text-color-inherit">Vasica Oy</div>
                         </div>
                       </div>
                     </div>
@@ -938,6 +960,28 @@
                   </div>
                 </div>
               </div>
+              <div data-wf--testimonial---global--variant="primary" class="testimonial__component">
+                <div class="testimonial__wrap">
+                  <div class="testimonial__content">
+                    <div class="testimonial__quote">
+                      <p class="display-body--lg">&quot;Tehokas, laadukas ja erittäin asiakaslähtöinen palvelu. Vahva suositus.&quot;</p>
+                    </div>
+                  </div>
+                  <div class="testimonial__avatar">
+                    <div data-wf--avatar---global--variant="primary" class="avatar__component">
+                      <div id="w-node-eff9879d-5adb-a1e9-3bab-e88007b9e947-18249e5a" class="avatar__divider"></div>
+                      <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e5d-18249e5a" class="avatar__content">
+                        <div class="avatar__name">
+                          <div class="text-color-inherit">Otto Joki</div>
+                        </div>
+                        <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e61-18249e5a" class="avatar__company">
+                          <div class="text-color-inherit"> </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
@@ -974,7 +1018,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="cta-full__video-wrap"><img src="images/Nuori-mies-puhelin.jpeg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.9921875px" srcset="images/cta-p-500.jpeg 500w, images/cta-p-800.jpeg 800w, images/cta-p-1080.jpeg 1080w, images/Nuori-mies-puhelin.jpeg 1600w" alt="Nuori mies mustassa takissa näyttää ja osoittaa puhelintaan, jossa on näppäimistön numeronäyttö avoinna." class="cta-full__video">
+                  <div class="cta-full__video-wrap"><img src="images/Nuori-mies-puhelin.jpeg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/cta-p-500.jpeg 500w, images/cta-p-800.jpeg 800w, images/cta-p-1080.jpeg 1080w, images/Nuori-mies-puhelin.jpeg 1600w" alt="Nuori mies mustassa takissa näyttää ja osoittaa puhelintaan, jossa on näppäimistön numeronäyttö avoinna." class="cta-full__video">
                     <div class="cta-full__video-mask"></div>
                   </div>
                 </div>
