--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Jan 20 2026 10:20:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Feb 01 2026 15:58:49 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc791d6" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Instrument Serif:regular,italic"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["IBM Plex Serif:300,400,500,600,700","Instrument Serif:300,400,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
@@ -722,7 +722,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="cta-full__video-wrap"><img src="images/Nuori-mies-puhelin.jpeg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.9921875px" srcset="images/cta-p-500.jpeg 500w, images/cta-p-800.jpeg 800w, images/cta-p-1080.jpeg 1080w, images/Nuori-mies-puhelin.jpeg 1600w" alt="Nuori mies mustassa takissa näyttää ja osoittaa puhelintaan, jossa on näppäimistön numeronäyttö avoinna." class="cta-full__video">
+                    <div class="cta-full__video-wrap"><img src="images/Nuori-mies-puhelin.jpeg" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/cta-p-500.jpeg 500w, images/cta-p-800.jpeg 800w, images/cta-p-1080.jpeg 1080w, images/Nuori-mies-puhelin.jpeg 1600w" alt="Nuori mies mustassa takissa näyttää ja osoittaa puhelintaan, jossa on näppäimistön numeronäyttö avoinna." class="cta-full__video">
                       <div class="cta-full__video-mask"></div>
                     </div>
                   </div>
